--- a/assets/style.less
+++ b/assets/style.less
@@ -1,9 +1,40 @@
 .front-post-modal {
-  position: absolute;
+  /*position: absolute;
   z-index: 999;
   left: 0;
   right: 0;
   top: 49px;
   bottom: 0;
-  height: 100%;
+  height: 100%;*/
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  ul li{
+    list-style: none;
+  }
+  #wpf-add-post-container{
+    margin: 5% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #dddddd;
+    width: 80%; /* Could be more or less, depending on screen size */
+
+    .wpf-form-field{
+      margin-bottom: 20px ;
+      label, input, textarea, select{
+        display: block;
+      }
+      input[type="text"]{
+        width: 100%;
+      }
+      textarea.tax-input-*{
+        background: none;
+        border: none;
+        height: 10px;
+      }
+    }
+  }
 }
