--- a/assets/style.less
+++ b/assets/style.less
@@ -14,6 +14,9 @@
   ul li{
     list-style: none;
   }
+  .wp-editor-area{
+    color: #000 !important;
+  }
   #wpf-add-post-container{
     margin: 5% auto; /* 15% from the top and centered */
     padding: 20px;
